--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "knex": "^0.20.4",
-    "mysql2": "^2.1.0"
+    "knex": "^0.20.7",
+    "mysql2": "^2.1.0",
+    "pg": "^7.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
